# estimate-pi

./: CMakeLists.txt  README.md  estimate_pi_cpu.cpp  estimate_pi_metal.m  estimate_pi_opencl.cpp  pi.cl  pi.metal  tinymt32j.h
profiling/: GPA_Output.txt  GPA_Result.xlsx
